* WRS request optional url attribute at `BindingSet` to pick servlet is moved to root WrsRequest element
* Grid configuration files: change of namespace for C elements wrq:C -> grid:C, removal of wrq:Columns in grid:SelectColumns and grid:OrderColumns, so such elements are directly followed by grid:C

___
==== Release 5_5_0

.Major new features:
* Migrated BCD-UI to Java 11
* Updated to log4j2
* Updated 3rd-party java libs
* Updated 3rd-party js libs
* Updated BCD-UI js code and documentation to ECMA 6 standard
* Removed jQuery Mobile

.Incompatibilities:
* Client
** Due to a security fix in the latest jQuery, self-closing html elements in jQuery.append() etc. are no longer allowed (Example: <span/> -> <span></span>)
** ChartEchart component uses new default colors, ensure to set colors in your projects and don't rely on default coloring
** Due to fontawesome/bootstrap/nouislider update, you need to rebuild your themes jar
** Grid pagination/action buttons are now in divs, so you may need to check your styling
** Grid editor bcduiSingleSelect was removed, use bcduiSimpleDropDown instead
** Moved QuickEdit to package bcdui.widgetNg
** createFixedTableHeader() uses new css classes, ensure your theme includes them
** bcdui.util.xml.parseFilterExpression was moved to bcdui.wrs.wrsUtil.parseFilterExpression

.Config
* In web.xml: add invalidRequest.blockSemicolon = false and check for other changes in Server/configFiles/web.xml
* Ensure to update dependency jars, see Docu/development/bcdui_dependencies.gradle
* Use Server/configFiles/log4j2.xml (instead of log4j.properties)
* Wrq2SqlServlet has restricted access permissions now requiring bcdAdmin:ImplementationDetails as it reveals implementation details (actual names of db objects)
* bindingItem skipWriteCheck attribute (to bypass subject settings write checks) was removed. Use the new mode (R|W|RW) attribute on SubjectFilterType instead